test/syc/good/arraydecl.c
/*
 * Array declaration
 */

/* Array declared as a global variable */
int a[10];

void arraylocal(void)
{
	/* Array declared as local variable */
	int b[10];

	(void)b;
}
