test/syc/bad/arraycast.c
/*
 * Casting to an array type
 */

int a[10];
int b[10];

void foo(void)
{
	a = (int[])b;
}
